<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/btn_segitiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/segitiga"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btn_lingkaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lingkaran"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btn_persegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/persegi"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perhitungan_luas"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="17sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_krismia_maharani_helmi"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim_8020200128"
        android:textSize="15sp"/>
</LinearLayout>